--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,12 +1,14 @@
 <% content_for :title, "Welcome" %>
 
-<div class="row justify-content-center mt-5">
-  <div class="col-md-8 text-center">
-    <h1 class="display-4 mb-4">Welcome to Feeder</h1>
-    <p class="lead mb-4">A reposting service for FreeFeed.</p>
+<div class="flex justify-center my-8">
+  <div class="w-full max-w-2xl space-y-8 text-center">
+    <div class="space-y-4">
+      <h1 class="text-4xl font-bold text-slate-900 sm:text-5xl">Welcome to Feeder</h1>
+      <p class="text-xl text-slate-600">A reposting service for FreeFeed.</p>
+    </div>
 
-    <div class="d-flex gap-3 justify-content-center">
-      <%= link_to "Sign In", new_session_path, class: "btn btn-primary btn-lg" %>
+    <div class="flex justify-center">
+      <%= link_to "Sign In", new_session_path, class: "ff-button ff-button--lg" %>
     </div>
   </div>
 </div>
