--- a/app/views/layouts/modal.html.erb
+++ b/app/views/layouts/modal.html.erb
@@ -4,7 +4,7 @@
     <%= render "layouts/head" %>
   </head>
   <body class="min-h-screen bg-white text-slate-900 sm:bg-slate-100">
-    <main class="mx-auto w-full max-w-2xl px-6 py-3 sm:px-6 sm:py-6" data-controller="autofocus">
+    <main class="mx-auto w-full max-w-2xl px-6 pb-3 pt-6 sm:px-6 sm:py-6" data-controller="autofocus">
       <%= render "layouts/flash" %>
       <%= yield %>
     </main>
