--- a/app/views/settings/email_updates/edit.html.erb
+++ b/app/views/settings/email_updates/edit.html.erb
@@ -1,11 +1,7 @@
 <% content_for :title, "Change Email Address" %>
 
 <div class="space-y-8">
-  <%= render PageHeaderComponent.new(title: "Change Email Address") do |header| %>
-    <% header.with_action_button do %>
-      <%= link_to "Back to Settings", settings_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
-    <% end %>
-  <% end %>
+  <%= render PageHeaderComponent.new(title: "Change Email Address") %>
 
   <% if @user.email_deactivated? %>
     <div class="ff-alert ff-alert--danger max-w-2xl space-y-2" role="alert">
@@ -19,27 +15,23 @@
   <% end %>
 
   <div class="max-w-2xl">
-    <div class="ff-card">
-      <div class="ff-card__body">
-        <%= form_with model: @user, url: settings_email_update_path, method: :patch, local: true do |form| %>
-          <div class="space-y-6">
-            <div class="ff-form-group">
-              <%= form.label :current_email, "Current email", class: "ff-form-label" %>
-              <%= form.text_field :current_email, value: @user.email_address, disabled: true, class: "ff-form-input" %>
-            </div>
+    <%= form_with model: @user, url: settings_email_update_path, method: :patch, local: true do |form| %>
+      <div class="space-y-6">
+        <div class="ff-form-group">
+          <%= form.label :current_email, "Current email", class: "ff-form-label" %>
+          <%= form.text_field :current_email, value: @user.email_address, disabled: true, class: "ff-form-input bg-slate-100" %>
+        </div>
 
-            <div class="ff-form-group">
-              <%= form.label :email_address, "New email", class: "ff-form-label" %>
-              <%= form.email_field :email_address, value: "", class: "ff-form-input", placeholder: "Enter new email address", autofocus: true, autocomplete: "email" %>
-            </div>
-          </div>
-
-          <div class="ff-card__footer">
-            <%= form.submit "Update Email", class: "ff-button" %>
-            <%= link_to "Cancel", settings_path, class: class_names("ff-button", "ff-button--secondary") %>
-          </div>
-        <% end %>
+        <div class="ff-form-group">
+          <%= form.label :email_address, "New email", class: "ff-form-label" %>
+          <%= form.email_field :email_address, value: "", class: "ff-form-input", placeholder: "Enter new email address", autofocus: true, autocomplete: "email" %>
+        </div>
       </div>
-    </div>
+
+      <div class="ff-card__footer">
+        <%= form.submit "Update Email", class: "ff-button" %>
+        <%= link_to "Cancel", settings_path, class: class_names("ff-button", "ff-button--secondary") %>
+      </div>
+    <% end %>
   </div>
 </div>
