--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,42 +3,44 @@
     <%= link_to "F2", root_path, class: class_names("ff-nav-brand", "ff-focus-ring") %>
 
     <div class="flex items-center gap-3 md:order-2">
-      <%# User menu button (desktop) %>
-      <button type="button" class="hidden md:flex items-center justify-center w-8 h-8 rounded-full bg-slate-600 text-white text-sm font-semibold focus:outline-none focus:ring-4 focus:ring-slate-300" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom-end">
-        <span class="sr-only">Open user menu</span>
-        <%= Current.user.email_address[0].upcase %>
-      </button>
+      <% if Current.user.present? %>
+        <%# User menu button (desktop) %>
+        <button type="button" class="hidden md:flex items-center justify-center w-8 h-8 rounded-full bg-slate-600 text-white text-sm font-semibold focus:outline-none focus:ring-4 focus:ring-slate-300" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom-end">
+          <span class="sr-only">Open user menu</span>
+          <%= Current.user.email_address[0].upcase %>
+        </button>
 
-      <%# User dropdown menu (desktop) %>
-      <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-slate-100 rounded-lg shadow-sm border border-slate-200" id="user-dropdown">
-        <div class="px-4 py-3">
-          <span class="block text-sm text-slate-900 font-medium"><%= Current.user.email_address %></span>
+        <%# User dropdown menu (desktop) %>
+        <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-slate-100 rounded-lg shadow-sm border border-slate-200" id="user-dropdown">
+          <div class="px-4 py-3">
+            <span class="block text-sm text-slate-900 font-medium"><%= Current.user.email_address %></span>
+          </div>
+          <ul class="py-2" aria-labelledby="user-menu-button">
+            <li>
+              <%= link_to "Settings", settings_path, class: "block px-4 py-2 text-sm text-slate-700 hover:bg-slate-100" %>
+            </li>
+            <li>
+              <%= link_to "Tokens", settings_access_tokens_path, class: "block px-4 py-2 text-sm text-slate-700 hover:bg-slate-100" %>
+            </li>
+            <li>
+              <%= link_to "Invites", invites_path, class: "block px-4 py-2 text-sm text-slate-700 hover:bg-slate-100" %>
+            </li>
+          </ul>
+          <ul class="py-2">
+            <li>
+              <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "block px-4 py-2 text-sm text-slate-700 hover:bg-slate-100" %>
+            </li>
+          </ul>
         </div>
-        <ul class="py-2" aria-labelledby="user-menu-button">
-          <li>
-            <%= link_to "Settings", settings_path, class: "block px-4 py-2 text-sm text-slate-700 hover:bg-slate-100" %>
-          </li>
-          <li>
-            <%= link_to "Tokens", settings_access_tokens_path, class: "block px-4 py-2 text-sm text-slate-700 hover:bg-slate-100" %>
-          </li>
-          <li>
-            <%= link_to "Invites", invites_path, class: "block px-4 py-2 text-sm text-slate-700 hover:bg-slate-100" %>
-          </li>
-        </ul>
-        <ul class="py-2">
-          <li>
-            <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "block px-4 py-2 text-sm text-slate-700 hover:bg-slate-100" %>
-          </li>
-        </ul>
-      </div>
 
-      <%# Mobile menu toggle %>
-      <button data-collapse-toggle="primary-navigation" type="button" class="inline-flex items-center justify-center rounded-lg p-2 text-sm text-slate-600 hover:bg-slate-100 focus:outline-none focus:ring-2 focus:ring-slate-200 md:hidden" aria-controls="primary-navigation" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <svg class="h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
-        </svg>
-      </button>
+        <%# Mobile menu toggle %>
+        <button data-collapse-toggle="primary-navigation" type="button" class="inline-flex items-center justify-center rounded-lg p-2 text-sm text-slate-600 hover:bg-slate-100 focus:outline-none focus:ring-2 focus:ring-slate-200 md:hidden" aria-controls="primary-navigation" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <svg class="h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
+          </svg>
+        </button>
+      <% end %>
     </div>
 
     <div class="hidden w-full md:block md:w-auto md:order-1" id="primary-navigation">
@@ -94,43 +96,45 @@
         <% end %>
       </div>
 
-      <%# Mobile: List group 2 - User menu items %>
-      <div class="mt-3 rounded-lg border border-slate-200 bg-white md:hidden">
-        <%= link_to "Settings", settings_path,
-            class: class_names(
-              "block w-full px-4 py-2 cursor-pointer hover:bg-slate-100 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-700 focus:text-slate-900 rounded-t-lg border-b border-slate-200",
-              {
-                "bg-slate-600 text-white hover:bg-slate-700 hover:text-white focus:text-white" => current_page?(settings_path),
-                "text-slate-700" => !current_page?(settings_path)
-              }
-            ),
-            aria: (current_page?(settings_path) ? { current: "page" } : nil) %>
-        <%= link_to "Tokens", settings_access_tokens_path,
-            class: class_names(
-              "block w-full px-4 py-2 cursor-pointer hover:bg-slate-100 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-700 focus:text-slate-900 border-b border-slate-200",
-              {
-                "bg-slate-600 text-white hover:bg-slate-700 hover:text-white focus:text-white" => current_page?(settings_access_tokens_path),
-                "text-slate-700" => !current_page?(settings_access_tokens_path)
-              }
-            ),
-            aria: (current_page?(settings_access_tokens_path) ? { current: "page" } : nil) %>
-        <%= link_to "Invites", invites_path,
-            class: class_names(
-              "block w-full px-4 py-2 cursor-pointer hover:bg-slate-100 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-700 focus:text-slate-900 rounded-b-lg",
-              {
-                "bg-slate-600 text-white hover:bg-slate-700 hover:text-white focus:text-white" => current_page?(invites_path),
-                "text-slate-700" => !current_page?(invites_path)
-              }
-            ),
-            aria: (current_page?(invites_path) ? { current: "page" } : nil) %>
-      </div>
+      <% if Current.user.present? %>
+        <%# Mobile: List group 2 - User menu items %>
+        <div class="mt-3 rounded-lg border border-slate-200 bg-white md:hidden">
+          <%= link_to "Settings", settings_path,
+              class: class_names(
+                "block w-full px-4 py-2 cursor-pointer hover:bg-slate-100 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-700 focus:text-slate-900 rounded-t-lg border-b border-slate-200",
+                {
+                  "bg-slate-600 text-white hover:bg-slate-700 hover:text-white focus:text-white" => current_page?(settings_path),
+                  "text-slate-700" => !current_page?(settings_path)
+                }
+              ),
+              aria: (current_page?(settings_path) ? { current: "page" } : nil) %>
+          <%= link_to "Tokens", settings_access_tokens_path,
+              class: class_names(
+                "block w-full px-4 py-2 cursor-pointer hover:bg-slate-100 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-700 focus:text-slate-900 border-b border-slate-200",
+                {
+                  "bg-slate-600 text-white hover:bg-slate-700 hover:text-white focus:text-white" => current_page?(settings_access_tokens_path),
+                  "text-slate-700" => !current_page?(settings_access_tokens_path)
+                }
+              ),
+              aria: (current_page?(settings_access_tokens_path) ? { current: "page" } : nil) %>
+          <%= link_to "Invites", invites_path,
+              class: class_names(
+                "block w-full px-4 py-2 cursor-pointer hover:bg-slate-100 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-700 focus:text-slate-900 rounded-b-lg",
+                {
+                  "bg-slate-600 text-white hover:bg-slate-700 hover:text-white focus:text-white" => current_page?(invites_path),
+                  "text-slate-700" => !current_page?(invites_path)
+                }
+              ),
+              aria: (current_page?(invites_path) ? { current: "page" } : nil) %>
+        </div>
 
-      <%# Mobile: List group 3 - Sign Out %>
-      <div class="mt-3 rounded-lg border border-slate-200 bg-white md:hidden">
-        <%= link_to "Sign Out", session_path,
-            data: { turbo_method: :delete },
-            class: "block w-full px-4 py-2 text-slate-700 rounded-lg cursor-pointer hover:bg-slate-100 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-700 focus:text-slate-900" %>
-      </div>
+        <%# Mobile: List group 3 - Sign Out %>
+        <div class="mt-3 rounded-lg border border-slate-200 bg-white md:hidden">
+          <%= link_to "Sign Out", session_path,
+              data: { turbo_method: :delete },
+              class: "block w-full px-4 py-2 text-slate-700 rounded-lg cursor-pointer hover:bg-slate-100 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-700 focus:text-slate-900" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </nav>
