--- a/app/components/confirmation_modal_component.html.erb
+++ b/app/components/confirmation_modal_component.html.erb
@@ -5,7 +5,7 @@
      aria-labelledby="<%= @modal_id %>-title"
      aria-describedby="<%= @modal_id %>-description"
      aria-hidden="true"
-     class="hidden overflow-y-auto overflow-x-hidden fixed inset-0 z-50 flex justify-center items-center bg-black bg-opacity-50"
+     class="hidden overflow-y-auto overflow-x-hidden fixed inset-0 z-50 flex justify-center items-center bg-black/25"
      data-controller="confirmation-modal">
   <div class="relative p-4 w-full max-w-2xl max-h-full">
     <!-- Modal content -->
