--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -82,7 +82,8 @@
     modal_id: "purge-modal-#{@feed.id}"
   ) do %>
     <div class="ff-alert ff-alert--warning">
-      <p>This can't be undone. Every published post in <%= @feed.target_group %> will be withdrawn on FreeFeed. They'll remain visible in Feeder but can't be restored publicly.</p>
+      <p>Every published post in <%= @feed.target_group %> will be withdrawn on FreeFeed. They'll remain visible in Feeder import history, and will not be re-imported during the next feed refresh.</p>
+      <p>This operation can't be undone.</p>
     </div>
   <% end %>
 <% end %>
@@ -94,7 +95,10 @@
   method: :delete,
   modal_id: "delete-feed-modal-#{@feed.id}"
 ) do %>
-  <div class="ff-alert ff-alert--warning">
-    <p>This can't be undone. This feed will be permanently removed from Feeder. All configuration and history will be lost.</p>
+  <div class="ff-alert ff-alert--warning space-y-2">
+    <p>This feed will be permanently removed from Feeder, as well as the related reposting history.</p>
+    <p>Associated access token will remain untouched.</p>
+    <p>All FreeFeed posts will remain published.</p>
+    <p>This operation can't be undone.</p>
   </div>
 <% end %>
