Fix the centering

--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -47,7 +47,7 @@
 
     <section class="space-y-4">
       <h2 class="ff-h2">Imported Posts</h2>
-      <div class="overflow-x-auto">
+      <div class="flex justify-center overflow-x-auto">
         <%= render PostsHeatmapComponent.new(user: @user) %>
       </div>
     </section>
