Always use white bg for email previews

--- a/app/views/development/sent_emails/show.html.erb
+++ b/app/views/development/sent_emails/show.html.erb
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </div>
-      <div class="rounded-lg border border-slate-200 bg-slate-50 p-4" data-email-viewer-target="textPanel">
+      <div class="rounded-lg border border-slate-200 bg-white p-4" data-email-viewer-target="textPanel">
         <pre class="mb-0 whitespace-pre-wrap overflow-auto text-sm text-slate-700" data-key="development.emails.text-part"><%= h @email[:text_part] %></pre>
       </div>
       <div class="hidden rounded-lg border border-slate-200 bg-white" data-email-viewer-target="htmlPanel">
@@ -44,7 +44,7 @@
       </div>
     </div>
   <% else %>
-    <div class="rounded-lg border border-slate-200 bg-slate-50 p-4">
+    <div class="rounded-lg border border-slate-200 bg-white p-4">
       <pre class="mb-0 whitespace-pre-wrap text-sm text-slate-700" data-key="development.emails.body"><%= h @email[:body] %></pre>
     </div>
   <% end %>
