--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -2,6 +2,27 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+        color: #000;
+        background-color: #fff;
+        margin: 0;
+        padding: 16px;
+      }
+      p {
+        margin: 0 0 16px 0;
+      }
+      a {
+        color: #0066cc;
+        text-decoration: underline;
+      }
+      strong, b {
+        font-weight: 600;
+      }
+    </style>
   </head>
   <body>
     <%= yield %>
