Unhardcode email links expiration time

--- a/app/views/passwords_mailer/reset.text.erb
+++ b/app/views/passwords_mailer/reset.text.erb
@@ -4,7 +4,7 @@ Someone requested a password reset for your account. If that was you, click the 
 
 <%= edit_password_url(@user.password_reset_token) %>
 
-This link will expire in 15 minutes for security reasons.
+This link will expire in <%= distance_of_time_in_words(User::PASSWORD_RESET_TTL) %> for security reasons.
 
 If you didn't request this, you can safely ignore this email. Your password won't change.
 
