--- a/app/views/profile_mailer/email_change_confirmation.text.erb
+++ b/app/views/profile_mailer/email_change_confirmation.text.erb
@@ -4,7 +4,7 @@ You requested to change your email address to <%= @new_email %>. Click the link 
 
 <%= @confirmation_url %>
 
-This link will expire in 24 hours for security reasons.
+This link will expire in <%= distance_of_time_in_words(User::EMAIL_CONFIRMATION_TTL) %> for security reasons.
 
 If you didn't request this change, you can safely ignore this email. Your email address won't change.
 
