Improhe email layout and transactional email texts (#236)
* Always use white bg for email previews

* Use consistent font size in the page title for email previews

* Add minimal CSS to the HTML email layout

* Use default font size, and unified timestamp formatting

* Move long URL to a separate paragraph

* Embetter transactional email templates

* Unhardcode email links expiration time

* Add meta tags to the email layout

* Support dark theme in the email layout

* Compute TTL with `distance_of_time_in_words` correctly

--- a/app/views/development/sent_emails/show.html.erb
+++ b/app/views/development/sent_emails/show.html.erb
@@ -2,10 +2,8 @@
 
 <div class="space-y-8">
   <div class="flex items-center justify-between">
-    <h1 class="ff-h1 text-3xl" data-key="development.emails.subject"><%= h @email[:subject] %></h1>
-    <%= link_to "Back to all emails",
-                development_sent_emails_path,
-                class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
+    <h1 class="ff-h1" data-key="development.emails.subject"><%= h @email[:subject] %></h1>
+    <%= link_to "Back to all emails", development_sent_emails_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
   </div>
 
   <%= render SentEmailDetailsComponent.new(email: @email) %>
@@ -36,15 +34,15 @@
           </li>
         </ul>
       </div>
-      <div class="rounded-lg border border-slate-200 bg-slate-50 p-4" data-email-viewer-target="textPanel">
-        <pre class="mb-0 whitespace-pre-wrap overflow-auto text-sm text-slate-700" data-key="development.emails.text-part"><%= h @email[:text_part] %></pre>
+      <div class="rounded-lg border border-slate-200 bg-white p-4" data-email-viewer-target="textPanel">
+        <pre class="mb-0 whitespace-pre-wrap overflow-auto text-slate-700" data-key="development.emails.text-part"><%= h @email[:text_part] %></pre>
       </div>
       <div class="hidden rounded-lg border border-slate-200 bg-white" data-email-viewer-target="htmlPanel">
         <iframe srcdoc="<%= ERB::Util.html_escape(@email[:html_part]) %>" sandbox title="Email HTML preview" referrerpolicy="no-referrer" class="h-[400px] w-full rounded-lg"></iframe>
       </div>
     </div>
   <% else %>
-    <div class="rounded-lg border border-slate-200 bg-slate-50 p-4">
+    <div class="rounded-lg border border-slate-200 bg-white p-4">
       <pre class="mb-0 whitespace-pre-wrap text-sm text-slate-700" data-key="development.emails.body"><%= h @email[:body] %></pre>
     </div>
   <% end %>
