--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -2,6 +2,43 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="x-apple-disable-message-reformatting">
+    <meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
+    <meta name="color-scheme" content="light dark">
+    <meta name="supported-color-schemes" content="light dark">
+    <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+        color: #000;
+        background-color: #fff;
+        margin: 0;
+        padding: 16px;
+        -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+      }
+      p {
+        margin: 0 0 16px 0;
+      }
+      a {
+        color: #0066cc;
+        text-decoration: underline;
+      }
+      strong, b {
+        font-weight: 600;
+      }
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #000 !important;
+          color: #fff !important;
+        }
+        a {
+          color: #5c9eff !important;
+        }
+      }
+    </style>
   </head>
   <body>
     <%= yield %>
