--- a/app/views/passwords_mailer/reset.text.erb
+++ b/app/views/passwords_mailer/reset.text.erb
@@ -1,2 +1,13 @@
-You can reset your password within the next 15 minutes on this password reset page:
+Hi,
+
+Someone requested a password reset for your account. If that was you, click the link below to set a new password:
+
 <%= edit_password_url(@user.password_reset_token) %>
+
+This link will expire in <%= distance_of_time_in_words(Time.current, User::PASSWORD_RESET_TTL.from_now) %> for security reasons.
+
+If you didn't request this, you can safely ignore this email. Your password won't change.
+
+--
+Feeder
+<%= root_url %>
