--- a/app/views/profile_mailer/account_confirmation.text.erb
+++ b/app/views/profile_mailer/account_confirmation.text.erb
@@ -1,15 +1,15 @@
-Confirm your email address
+Hi,
 
-Hello,
-
-Thanks for signing up! Confirm your email below to activate your account:
+Thanks for signing up! Click the link below to confirm your email and activate your account:
 
 <%= @confirmation_url %>
 
-This link will expire in 24 hours for security reasons.
+This link will expire in <%= distance_of_time_in_words(Time.current, User::EMAIL_CONFIRMATION_TTL.from_now) %> for security reasons.
 
-Your email will be used for password recovery and optional notifications. No newsletter or other marketing nonsense. You can change this email in account settings any time.
+Your email will be used for password recovery and optional notifications. No newsletters or marketing nonsense. You can change it anytime in your account settings.
 
-If you didn't create this account, please ignore this email.
+If you didn't create this account, you can safely ignore this email.
 
-Thanks!
+--
+Feeder
+<%= root_url %>
