Define strict locals for all partials

--- a/app/views/feed_previews/_failed_status.html.erb
+++ b/app/views/feed_previews/_failed_status.html.erb
@@ -1,3 +1,4 @@
+<%# locals: () %>
 <div class="ff-alert ff-alert--error space-y-1" role="alert">
   <p class="ff-text ff-text--heavy">Preview generation failed.</p>
   <p class="ff-text">There was an error processing this feed. Double-check the feed URL and try again.</p>
