--- a/app/views/invites/_table.html.erb
+++ b/app/views/invites/_table.html.erb
@@ -1,3 +1,4 @@
+<%# locals: (invites:, new_invite_id: nil) %>
 <% if invites.any? %>
   <div class="ff-table-container">
     <table class="ff-table">
