--- a/app/views/settings/access_token_groups/_error.html.erb
+++ b/app/views/settings/access_token_groups/_error.html.erb
@@ -1,3 +1,4 @@
+<%# locals: (error:) %>
 <div id="groups-select">
   <select name="feed[target_group]" id="feed_target_group" class="form-select" disabled>
     <option value="">Error loading groups</option>
