--- a/app/views/shared/_access_token_status.html.erb
+++ b/app/views/shared/_access_token_status.html.erb
@@ -1,9 +1,4 @@
-<%-
-
-  access_token = local_assigns.fetch(:access_token)
-  error = local_assigns[:error]
-
--%>
+<%# locals: (access_token:, error: nil) %>
 
 <% if access_token.pending? %>
   <div
