--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -1,3 +1,4 @@
+<%# locals: (pagination_label:, pagination_current_page:, pagination_total_pages:, pagination_path:, pagination_total_count:, collection_size:, collection_name:) %>
 <% if pagination_total_pages > 1 %>
   <nav aria-label="<%= pagination_label %> pagination" class="mt-4">
     <ul class="pagination justify-content-center">
