--- a/app/views/shared/_pagination_tailwind.html.erb
+++ b/app/views/shared/_pagination_tailwind.html.erb
@@ -1,3 +1,4 @@
+<%# locals: (pagination_label:, pagination_current_page:, pagination_total_pages:, pagination_path:) %>
 <% if pagination_total_pages > 1 %>
   <nav aria-label="<%= pagination_label %> pagination" class="mt-8 flex justify-center">
     <ul class="inline-flex items-center -space-x-px rounded-lg border border-slate-200 bg-white text-sm shadow-sm">
