--- a/app/views/feed_previews/_completed_status.html.erb
+++ b/app/views/feed_previews/_completed_status.html.erb
@@ -1,3 +1,4 @@
+<%# locals: (feed_preview:) %>
 <% if feed_preview.posts_data.any? %>
   <p class="ff-text text-slate-600">Showing <%= feed_preview.posts_count %> most recent <%= "post".pluralize(feed_preview.posts_count) %>.</p>
 
