--- a/app/views/feed_previews/_header_actions.html.erb
+++ b/app/views/feed_previews/_header_actions.html.erb
@@ -1,3 +1,4 @@
+<%# locals: (feed_preview:) %>
 <div class="flex w-full flex-wrap items-center gap-2 sm:w-auto">
   <% unless feed_preview.processing? %>
     <%= button_to "Refresh Preview", feed_preview_path(feed_preview),
