--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,4 @@
+<%# locals: () %>
 <nav class="bg-slate-100 border-b border-slate-200">
   <div class="flex flex-wrap items-center justify-between mx-auto px-4 py-4">
     <%= link_to "F2", root_path, class: class_names("ff-nav-brand", "ff-focus-ring") %>
