--- a/app/views/shared/_flash_alert.html.erb
+++ b/app/views/shared/_flash_alert.html.erb
@@ -1,3 +1,4 @@
+<%# locals: (alert_type:, message:) %>
 <div class="alert alert-<%= alert_type %> alert-dismissible fade show" role="alert">
   <%= sanitize message %>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
