--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -66,6 +66,5 @@
 
   <%= pagination_for @posts,
                      collection_name: "posts",
-                     path_helper: ->(page) { posts_path(base_pagination_params.merge(page: page)) },
-                     template: "shared/pagination_tailwind" %>
+                     path_helper: ->(page) { posts_path(base_pagination_params.merge(page: page)) } %>
 </div>
