--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -67,8 +67,7 @@
 
     <%= pagination_for @feeds,
                        collection_name: "feeds",
-                       path_helper: ->(page) { feeds_path(page: page, sort: params[:sort], direction: params[:direction]) },
-                       template: "shared/pagination_tailwind" %>
+                       path_helper: ->(page) { feeds_path(page: page, sort: params[:sort], direction: params[:direction]) } %>
   <% else %>
     <div class="rounded-lg border border-dashed border-slate-300 bg-slate-50 px-6 py-12 text-center text-slate-600">
       <h2 class="text-2xl font-semibold text-slate-900">You don't have any feeds yet</h2>
