--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -1,42 +1,45 @@
-<%# locals: (pagination_label:, pagination_current_page:, pagination_total_pages:, pagination_path:, pagination_total_count:, collection_size:, collection_name:) %>
+<%# locals: (pagination_label:, pagination_current_page:, pagination_total_pages:, pagination_path:) %>
 <% if pagination_total_pages > 1 %>
-  <nav aria-label="<%= pagination_label %> pagination" class="mt-4">
-    <ul class="pagination justify-content-center">
+  <nav aria-label="<%= pagination_label %> pagination" class="mt-8 flex justify-center">
+    <ul class="inline-flex items-center -space-x-px rounded-lg border border-slate-200 bg-white text-sm shadow-sm">
       <% if pagination_current_page > 1 %>
-        <li class="page-item">
-          <%= link_to "Previous", pagination_path.call(pagination_current_page - 1), class: "page-link" %>
+        <li class="relative focus-within:z-10">
+          <%= link_to "Previous",
+                      pagination_path.call(pagination_current_page - 1),
+                      class: "flex h-9 items-center rounded-l-lg px-3 font-medium text-slate-600 transition hover:bg-slate-50 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2" %>
         </li>
       <% else %>
-        <li class="page-item disabled">
-          <span class="page-link">Previous</span>
+        <li class="relative">
+          <span class="flex h-9 items-center rounded-l-lg px-3 font-medium text-slate-300">Previous</span>
         </li>
       <% end %>
 
       <% each_page(pagination_current_page, pagination_total_pages) do |page| %>
         <% if page == pagination_current_page %>
-          <li class="page-item active">
-            <span class="page-link"><%= page %></span>
+          <li class="relative">
+            <span class="flex h-9 items-center border-x border-slate-200 bg-slate-100 px-3 font-semibold text-slate-900"><%= page %></span>
           </li>
         <% else %>
-          <li class="page-item">
-            <%= link_to page, pagination_path.call(page), class: "page-link" %>
+          <li class="relative focus-within:z-10">
+            <%= link_to page,
+                        pagination_path.call(page),
+                        class: "flex h-9 items-center border-x border-slate-200 bg-white px-3 text-slate-600 transition hover:bg-slate-50 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2",
+                        aria: { label: "Go to page #{page}" } %>
           </li>
         <% end %>
       <% end %>
 
       <% if pagination_current_page < pagination_total_pages %>
-        <li class="page-item">
-          <%= link_to "Next", pagination_path.call(pagination_current_page + 1), class: "page-link" %>
+        <li class="relative focus-within:z-10">
+          <%= link_to "Next",
+                      pagination_path.call(pagination_current_page + 1),
+                      class: "flex h-9 items-center rounded-r-lg px-3 font-medium text-slate-600 transition hover:bg-slate-50 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2" %>
         </li>
       <% else %>
-        <li class="page-item disabled">
-          <span class="page-link">Next</span>
+        <li class="relative">
+          <span class="flex h-9 items-center rounded-r-lg px-3 font-medium text-slate-300">Next</span>
         </li>
       <% end %>
     </ul>
-
-    <div class="text-center text-muted">
-      Showing <%= collection_size %> of <%= pagination_total_count %> <%= collection_name %>
-    </div>
   </nav>
 <% end %>
