--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -65,9 +65,11 @@
   <% if @feeds.any? %>
     <%= render FeedsListComponent.new(feeds: @feeds) %>
 
-    <%= pagination_for @feeds,
-                       collection_name: "feeds",
-                       path_helper: ->(page) { feeds_path(page: page, sort: params[:sort], direction: params[:direction]) } %>
+    <%= render PaginationComponent.new(
+                 collection_name: controller_name,
+                 path_helper: ->(page) { feeds_path(page: page, sort: params[:sort], direction: params[:direction]) },
+                 current_page: pagination_current_page,
+                 total_pages: pagination_total_pages) %>
   <% else %>
     <div class="rounded-lg border border-dashed border-slate-300 bg-slate-50 px-6 py-12 text-center text-slate-600">
       <h2 class="text-2xl font-semibold text-slate-900">You don't have any feeds yet</h2>
