--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -113,11 +113,7 @@
     </div>
 
     <div data-key="admin.events.pagination">
-      <%= render PaginationComponent.new(
-                   collection_name: controller_name,
-                   path_helper: ->(page) { admin_events_path(base_pagination_params.merge(page: page)) },
-                   current_page: pagination_current_page,
-                   total_pages: pagination_total_pages) %>
+      <%= pagination(->(page) { admin_events_path(base_pagination_params.merge(page: page)) }) %>
     </div>
   <% else %>
     <div class="ff-card">
